Updated Notebook Formatting

--- a/E4571-Personalization-Project/Part2/notebooks/Hybrid Matrix Factorization - Part 1.ipynb
+++ b/E4571-Personalization-Project/Part2/notebooks/Hybrid Matrix Factorization - Part 1.ipynb
@@ -831,16 +831,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 245,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<lightfm.lightfm.LightFM at 0x7ff32c2f77b8>"
+       "<lightfm.lightfm.LightFM at 0x7ff3271c3f28>"
       ]
      },
-     "execution_count": 112,
+     "execution_count": 245,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -897,7 +897,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 246,
    "metadata": {},
    "outputs": [
     {
@@ -912,11 +912,11 @@
       "Artist: Coldplay & Song: The Scientist\n",
       "\n",
       "Recommended Songs:\n",
+      "Artist: Coldplay & Song: Clocks\n",
       "Artist: Coldplay & Song: The Scientist\n",
       "Artist: Kings Of Leon & Song: Revelry\n",
-      "Artist: Coldplay & Song: Clocks\n",
-      "Artist: OneRepublic & Song: Secrets\n",
-      "Artist: Dwight Yoakam & Song: You're The One\n"
+      "Artist: Coldplay & Song: Shiver\n",
+      "Artist: Lady GaGa & Song: Alejandro\n"
      ]
     }
    ],
@@ -1738,6 +1738,82 @@
    "metadata": {},
    "source": [
     "## We see that the recommendations are quite different from the ones we had with the model without side information. However, they are still relevant to the user"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Calculation of the Baseline Metrics"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 226,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def baseline_top_items_n_precision_at_k(df_train_coo, df_test_coo, k):\n",
+    "    top_songs_indices = np.argsort((np.where(df_train_coo.todense()>0, 1, 0)).sum(axis=0))[::-1]\n",
+    "    df_test_pred = np.zeros_like(df_test_coo.todense())\n",
+    "    for val in top_songs_indices[:k]:\n",
+    "        df_test_pred[:,val] = 1\n",
+    "    listened_songs = np.where(df_test_coo.todense()>0, 1, 0)\n",
+    "    baseline_n_precision_at_k = (np.multiply(df_test_pred, listened_songs)).sum()\n",
+    "    \n",
+    "    return baseline_n_precision_at_k"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 252,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Baseline number of listened predictions across all users: 3031\n"
+     ]
+    }
+   ],
+   "source": [
+    "print ('Baseline number of listened predictions across all users: {0:.0f}'.format(baseline_top_items_n_precision_at_k(df_train_coo=df_train_coo, df_test_coo=df_test_coo, k=10)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 230,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def baseline_top_items_reciprocal_rank(df_train_coo, df_test_coo):\n",
+    "    top_songs_indices = np.argsort((np.where(df_train_coo.todense()>0, 1, 0)).sum(axis=0))[::-1]\n",
+    "    recip_rank_baseline = []\n",
+    "    for user in range(df_test_coo.shape[0]):\n",
+    "        listened_songs_user_indices = np.argwhere(df_test_coo.todense()[user])[:,1]\n",
+    "        if len(listened_songs_user_indices>0):\n",
+    "            rank = min([np.argwhere(top_songs_indices==val) for val in listened_songs_user_indices])+1\n",
+    "            recip_rank_baseline.append(1.0/rank)\n",
+    "        else: recip_rank_baseline.append(0)\n",
+    "    return np.mean(recip_rank_baseline)[0][0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 253,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Baseline Mean Reciprocal Rank across all users: 0.099\n"
+     ]
+    }
+   ],
+   "source": [
+    "print ('Baseline Mean Reciprocal Rank across all users: {0:.3f}'.format(baseline_top_items_reciprocal_rank(df_train_coo=df_train_coo, df_test_coo=df_test_coo)))"
    ]
   }
  ],
